updated footer into modal; temp fix nav overlap

--- a/jsweb/src/App.css
+++ b/jsweb/src/App.css
@@ -10,71 +10,8 @@ nav.navbar {
   z-index: 9999;
   transition:  0.32s ease-in-out;
 }
-.second-navbar {
-  margin-top: 75px;
-  background-color: lightgoldenrodyellow;
-  height: 100%;
-  width: 190px;
-  position: fixed; 
-  z-index: 1;
-  top: 0;
-  left: 0;
-  overflow-x: hidden; 
-  padding-top: 20px;
-  padding-left: 30px;
-  padding-right: 30px;
-}
-.info-page {
-  margin-top: 75px;
-  margin-left: 160px;
-  width: 100%;
-  min-height: 100vh;
-  background-color: antiquewhite;
-  overflow: auto;
-  padding: 20px; 
-  padding-bottom: 80px;
-  padding-left: 8rem;
-  padding-right: 8rem;
-}
-.services-container {
-  display: flex;
-  flex: 1;
-}
-.footer {
-  background-color: #333;
-  color: #fff;
-  text-align: center;
-  padding: 15px 0;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-}
 
-.footer-content {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 20px;
-}
-
-.footer-links {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-}
-
-.footer-links li {
-  margin: 0 10px;
-}
-
-.footer-links a {
-  color: #fff;
-  text-decoration: none;
-}
-
-.footer-links a:hover {
-  text-decoration: underline;
+/* Global padding for all pages for overlap */
+body {
+  padding-top: 70px;
 }
